--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,15 +1,20 @@
 [package]
-name = "greeter"
+name = "amm"
 version = "1.0.0"
 authors = ["Near Inc <hello@near.org>"]
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 near-sdk = "4.0.0"
-uint = { version = "0.9.3", default-features = false }
+near-contract-standards = "4.0.0"
+
+
+[dev-dependencies]
+near-sdk-sim = "4.0.0"
+
 
 [profile.release]
 codegen-units = 1
