--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -10,11 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 near-sdk = "4.0.0"
 near-contract-standards = "4.0.0"
-
-
-[dev-dependencies]
-near-sdk-sim = "4.0.0"
-
+near-sdk-sim = {git = "https://github.com/near/near-sdk-rs.git", tag = "4.0.0-pre.8"}
 
 
 [profile.release]
